# WRO_2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
ARDUINO/: Movement.cpp
ARDUINO/main/: Connection.cpp  Connection.h  Movement.cpp  Movement.h  eventHandlers.h  main.ino
DOC/: WRO_2025_Carcharodontosaurus.aux  WRO_2025_Carcharodontosaurus.fdb_latexmk  WRO_2025_Carcharodontosaurus.fls  WRO_2025_Carcharodontosaurus.tex
RPI/: Boot.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Connection.cpp  Connection.h  DistaceSensor.h  DistanceSensor.cpp  DistanceSensor.h  Movement.cpp  Movement.h  Robot.cpp  Robot.h  WRO_2025.cpp  utils.h
SHARED/: Connection.h
WRO/: WRO_2025_Carcharodontosaurus.synctex.gz.sum.synctex
WRO_2025/: CMakeLists.txt  Connection.cpp  Connection.h  Movement.cpp  Movement.h  WRO_2025.cpp  WRO_2025.h
main/: Connection.cpp  Connection.h  Movement.cpp  Movement.h  main.ino
